--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             </div>
        </div>
        <div class="navparent" role="navigation" aria-level="primary navigation">
-           <a class="button-one" href="home.html">home</a>
+           <a class="button-one" href="index.html">home</a>
            <a class="button-two" href="products.html">product</a>
            <a class="button-three" href="contact.html">contact</a>
        </div>
